mikec/tests/PASS/base/operators/equal/25.mc
/* "==" operator */

int main()
{

    7==7;
}