mikec/tests/fail/assign/16.mc
/* undeclared variable */
void main()
{
	a=5;
}
